add eslint and prettier

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,4 +1,2 @@
-/src/apps/sm/nlmk-components
-.eslintcache
-vite.config.js
-/screenshot
+;/src/apps / sm / nlmk - components.eslintcache
+vite.config.js / screenshot
