--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -14,27 +14,30 @@ jobs:
         node-version: [18.x]  # Обновляем версию Node.js
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3  # Обновляем до v3
 
       - name: Set up Node.js
-        uses: actions/setup-node@v3  # Обновляем до v3
+        uses: actions/setup-node@v4  # Обновляем до v4
         with:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
         run: npm ci  # Используем npm ci для быстрой установки зависимостей
 
-      - name: Build
-        run: npm run build
+      - name: Lint
+        run: npm run lint  # Запуск линтера
 
       - name: Test
-        run: npm test
+        run: npm run test  # Запуск тестов
+
+      - name: Build
+        run: npm run build  # Сборка проекта
 
   push_to_Docker_Hub:
     runs-on: ubuntu-latest
     needs: [build_test]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3  # Обновляем до v3
 
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2  # Обновляем до v2
@@ -49,7 +52,7 @@ jobs:
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
-        uses: docker/build-push-action@v4  # Обновляем до v4
+        uses: docker/build-push-action@v5  # Обновляем до v5
         with:
           context: ./
           file: ./Dockerfile
@@ -68,13 +71,25 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build_test]
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3  # Обновляем до v3
 
       - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v20
+        uses: amondnet/vercel-action@v21  # Обновляем до v21
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.ORG_ID}}
           vercel-project-id: ${{ secrets.PROJECT_ID}}
           vercel-args: "--prod"
+
+  notify:
+    runs-on: ubuntu-latest
+    needs: [build_test, push_to_Docker_Hub, push_to_vercel]
+    steps:
+      - name: Notify success
+        if: success()
+        run: echo "Build and deployment succeeded!"
+
+      - name: Notify failure
+        if: failure()
+        run: echo "Build or deployment failed!"
