--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,7 +27,7 @@ jobs:
       - name: Build
         run: npm run build
 
-  push_to_Docker_Hub:
+  Docker:
     runs-on: ubuntu-latest
     needs: [build_test]
     steps:
@@ -61,14 +61,14 @@ jobs:
           run: |
             echo "running the docker image"
 
-  push_to_vercel:
+  Vercel:
     runs-on: ubuntu-latest
     needs: [build_test]
     steps:
       - uses: actions/checkout@v3
 
       - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v21
+        uses: amondnet/vercel-action@v20
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
@@ -78,7 +78,7 @@ jobs:
 
   notify:
     runs-on: ubuntu-latest
-    needs: [build_test, push_to_Docker_Hub, push_to_vercel]
+    needs: [build_test, Docker, Vercel]
     steps:
       - name: Notify success
         if: success()
