--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -61,9 +61,24 @@ jobs:
           run: |
             echo "running the docker image"
 
+  Vercel:
+    runs-on: ubuntu-latest
+    needs: [build_test]
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Deploy to Vercel
+        uses: amondnet/vercel-action@v20
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.ORG_ID}}
+          vercel-project-id: ${{ secrets.PROJECT_ID}}
+          vercel-args: "--prod"
+          
   notify:
     runs-on: ubuntu-latest
-    needs: [build_test, Docker]
+    needs: [build_test, Docker, Vercel]
     steps:
       - name: Notify success
         if: success()
