--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Build Storybook
+        run: npm run build-storybook
+
   Docker:
     runs-on: ubuntu-latest
     needs: [build_test]
@@ -45,7 +48,7 @@ jobs:
           username: ${{ secrets.REACTUSERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      - name: Build and push
+      - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: ./
@@ -59,7 +62,10 @@ jobs:
         with:
           image: ${{ secrets.REACTUSERNAME }}/sm-frontend:latest
           run: |
-            echo "running the docker image"
+            echo "Running the Docker image"
+            # Запустите Storybook в Docker-контейнере, если это необходимо
+            # Например, можно запустить Storybook на порту 6006
+            docker exec -d <container_id> npm run storybook
 
   Vercel:
     runs-on: ubuntu-latest
@@ -72,10 +78,10 @@ jobs:
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.ORG_ID}}
-          vercel-project-id: ${{ secrets.PROJECT_ID}}
+          vercel-org-id: ${{ secrets.ORG_ID }}
+          vercel-project-id: ${{ secrets.PROJECT_ID }}
           vercel-args: "--prod"
-          
+
   notify:
     runs-on: ubuntu-latest
     needs: [build_test, Docker, Vercel]
@@ -84,6 +90,6 @@ jobs:
         if: success()
         run: echo "Build and deployment succeeded!"
 
-      - name: Notify failure 
+      - name: Notify failure
         if: failure()
         run: echo "Build or deployment failed!"
