--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  build_test:
+  build_storybook:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -24,15 +24,12 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build
-        run: npm run build
-
       - name: Build Storybook
         run: npm run build-storybook
 
   Docker:
     runs-on: ubuntu-latest
-    needs: [build_test]
+    needs: [build_storybook]
     steps:
       - uses: actions/checkout@v3
 
@@ -63,17 +60,14 @@ jobs:
           image: ${{ secrets.REACTUSERNAME }}/sm-frontend:latest
           run: |
             echo "Running the Docker image"
-            # Запустите Storybook в Docker-контейнере, если это необходимо
-            # Например, можно запустить Storybook на порту 6006
-            docker exec -d <container_id> npm run storybook
 
   Vercel:
     runs-on: ubuntu-latest
-    needs: [build_test]
+    needs: [build_storybook]
     steps:
       - uses: actions/checkout@v3
 
-      - name: Deploy to Vercel
+      - name: Deploy Storybook to Vercel
         uses: amondnet/vercel-action@v20
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         with:
@@ -84,7 +78,7 @@ jobs:
 
   notify:
     runs-on: ubuntu-latest
-    needs: [build_test, Docker, Vercel]
+    needs: [build_storybook, Docker, Vercel]
     steps:
       - name: Notify success
         if: success()
