Update and rename node.js.yml to ci-cd-pipeline.yml

--- a/.github/workflows/ci-cd-pipeline.yml
+++ b/.github/workflows/ci-cd-pipeline.yml
@@ -63,7 +63,7 @@ jobs:
 
   Vercel:
     runs-on: ubuntu-latest
-    needs: [build_storybook]
+    needs: [build_storybook, Vercel]
     steps:
       - uses: actions/checkout@v3
 
