--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -63,7 +63,7 @@ jobs:
 
   Vercel:
     runs-on: ubuntu-latest
-    needs: [build_storybook, Vercel]
+    needs: [build_storybook]
     steps:
       - uses: actions/checkout@v3
 
