--- a/nginx.conf
+++ b/nginx.conf
@@ -2,6 +2,11 @@ server {
     listen 80;
     server_name _;
 
+    location /storybook {
+        alias /usr/share/nginx/html/storybook-static/;
+        try_files $uri $uri/ /storybook/index.html;
+    }
+
     location / {
         root /usr/share/nginx/html;
         try_files $uri $uri/ /index.html;
