--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -2,7 +2,7 @@ name: Storybook
 
 on:
   push:
-    paths: ["stories/**", "src/**"]
+    paths: ["**/*.stories.tsx", "src/**"]
 
 jobs:
   build-and-deploy:
@@ -14,7 +14,7 @@ jobs:
       - name: Use Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '16'
+          node-version: '20'
 
       - name: Cache npm dependencies
         uses: actions/cache@v3
