--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ on:
     branches: [main]
 
 jobs:
-  build_storybook:
+  build:
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -24,12 +24,9 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build Storybook
-        run: npm run build-storybook
-
   Docker:
     runs-on: ubuntu-latest
-    needs: [build_storybook]
+    needs: [build]
     steps:
       - uses: actions/checkout@v3
 
@@ -63,11 +60,11 @@ jobs:
 
   Vercel:
     runs-on: ubuntu-latest
-    needs: [build_storybook, Docker]
+    needs: [build, Docker]
     steps:
       - uses: actions/checkout@v3
 
-      - name: Deploy Storybook to Vercel
+      - name: Deploy to Vercel
         uses: amondnet/vercel-action@v20
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         with:
@@ -78,7 +75,7 @@ jobs:
 
   notify:
     runs-on: ubuntu-latest
-    needs: [build_storybook, Docker, Vercel]
+    needs: [build, Docker, Vercel]
     steps:
       - name: Notify success
         if: success()
