--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -6,37 +6,40 @@ on:
     paths: ["**/*.stories.tsx", "src/**"]
 
 jobs:
-  build-and-deploy:
+  Build:
+      runs-on: ubuntu-latest
+      strategy:
+        matrix:
+          node-version: [20.x]
+  
+      steps:
+        - name: Checkout 🛎️
+        - uses: actions/checkout@v3
+          with:
+            persist-credentials: false
+
+        - name: Install dependencies
+          run: npm ci
+
+        - name: Build Storybook 🔧
+          run: npm run build-storybook
+          
+        - name: Set up Node.js
+          uses: actions/setup-node@v4
+          with:
+            node-version: ${{ matrix.node-version }}
+
+  Vercel:
     runs-on: ubuntu-latest
+    needs: [Build]
     steps:
-      - name: Checkout 🛎️
-        uses: actions/checkout@v3
-
-      - name: Use Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: '20'
-
-      - name: Cache npm dependencies
-        uses: actions/cache@v3
-        with:
-          path: ~/.npm
-          key: ${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-cache-
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build Storybook 🔧
-        run: npm run build-storybook
+      - uses: actions/checkout@v3
 
       - name: Deploy to Vercel
-        uses: vercel/action@v2
+        uses: amondnet/vercel-action@v20
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.ORG_ID }}
           vercel-project-id: ${{ secrets.PROJECT_ID }}
-          vercel-args: '--prod'
-        env:
-          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          vercel-args: "--prod"
