--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -58,9 +58,25 @@ jobs:
           run: |
             echo "Running the Docker image"
 
-  notify:
+
+  Vercel:
     runs-on: ubuntu-latest
     needs: [build, Docker]
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Deploy to Vercel
+        uses: amondnet/vercel-action@v20
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        with:
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.ORG_ID }}
+          vercel-project-id: ${{ secrets.PROJECT_ID }}
+          vercel-args: "--prod"
+
+  notify:
+    runs-on: ubuntu-latest
+    needs: [build, Docker, Vercel]
     steps:
       - name: Notify success
         if: success()
