--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,59 +24,28 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-  Docker:
+      - name: Build Storybook
+        run: npm run build-storybook
+
+  Vercel:
     runs-on: ubuntu-latest
     needs: [build]
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v2
-
-      - name: Login to DockerHub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.REACTUSERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: ./
-          file: ./Dockerfile
-          push: true
-          no-cache: true
-          tags: ${{ secrets.REACTUSERNAME }}/sm-frontend:latest
-
-      - name: Run the image in a container
-        uses: addnab/docker-run-action@v3
-        with:
-          image: ${{ secrets.REACTUSERNAME }}/sm-frontend:latest
-          run: |
-            echo "Running the Docker image"
-
-
-  Vercel:
-    runs-on: ubuntu-latest
-    needs: [build, Docker]
-    steps:
-      - uses: actions/checkout@v3
-
-      - name: Deploy to Vercel
+      - name: Deploy Storybook to Vercel
         uses: amondnet/vercel-action@v20
         if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         with:
           vercel-token: ${{ secrets.VERCEL_TOKEN }}
           vercel-org-id: ${{ secrets.ORG_ID }}
           vercel-project-id: ${{ secrets.PROJECT_ID }}
-          vercel-args: "--prod"
+          working-directory: storybook-static
+          vercel-args: "--prod --scope your-scope-name"
 
   notify:
     runs-on: ubuntu-latest
-    needs: [build, Docker, Vercel]
+    needs: [build, Vercel]
     steps:
       - name: Notify success
         if: success()
