--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,16 +33,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Set up Node.js
-        uses: actions/setup-node@v4
+      - name: Deploy to Vercel
+        uses: amondnet/vercel-action@v20
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
         with:
-          node-version: '20.x'
-
-      - name: Deploy Storybook to Vercel
-        run: npx vercel --prod --scope your-scope-name -t ${{ secrets.VERCEL_TOKEN }} -m githubCommitSha=${{ github.sha }} -m githubCommitAuthorName=${{ github.actor }} -m githubCommitAuthorLogin=${{ github.actor }} -m githubDeployment=1 -m githubOrg=${{ github.repository_owner }} -m githubRepo=${{ github.repository }} -m githubCommitOrg=${{ github.repository_owner }} -m githubCommitRepo=${{ github.repository }} -m githubCommitMessage="${{ github.event.head_commit.message }}" -m githubCommitRef=${{ github.ref_name }}
-        env:
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
-          VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
+          vercel-token: ${{ secrets.VERCEL_TOKEN }}
+          vercel-org-id: ${{ secrets.ORG_ID }}
+          vercel-project-id: ${{ secrets.PROJECT_ID }}
+          working-directory: ./storybook-static
+          vercel-args: "--prod"
 
   notify:
     runs-on: ubuntu-latest
