--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,30 +27,46 @@ jobs:
       - name: Build Storybook
         run: npm run build-storybook
 
-  Vercel:
+  Docker:
     runs-on: ubuntu-latest
     needs: [build]
     steps:
       - uses: actions/checkout@v3
 
-      - name: Deploy to Vercel
-        uses: amondnet/vercel-action@v20
-        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
         with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.ORG_ID }}
-          vercel-project-id: ${{ secrets.PROJECT_ID }}
-          working-directory: ./storybook-static
-          vercel-args: "--prod"
+          username: ${{ secrets.REACTUSERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-  notify:
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: ./
+          file: ./Dockerfile
+          push: true
+          no-cache: true
+          tags: ${{ secrets.REACTUSERNAME }}/sm-frontend:latest
+
+      - name: Run the image in a container
+        uses: addnab/docker-run-action@v3
+        with:
+          image: ${{ secrets.REACTUSERNAME }}/sm-frontend:latest
+          run: |
+            echo "Running the Docker image"
+
+  Vercel:
     runs-on: ubuntu-latest
-    needs: [build, Vercel]
+    needs: [Docker]
     steps:
-      - name: Notify success
-        if: success()
-        run: echo "Build and deployment succeeded!"
+      - uses: actions/checkout@v3
 
-      - name: Notify failure
-        if: failure()
-        run: echo "Build or deployment failed!"
+      - name: Deploy Docker container to Vercel
+        run: |
+          npx vercel deploy --prod --prebuilt --token ${{ secrets.VERCEL_TOKEN }}
