--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -2,37 +2,28 @@ name: Storybook
 
 on:
   push:
+    branches: [main]
+  pull_request:
+    branches: [main]
 
 jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
-        uses: actions/checkout@v3
-
-      - name: Use Node.js
-        uses: actions/setup-node@v3
+        uses: actions/checkout@v2.3.1
         with:
-          node-version: '20'
-
-      - name: Cache npm dependencies
-        uses: actions/cache@v3
+          persist-credentials: false
+      - name: Install deps and build (with cache)
+        uses: bahmutov/npm-install@v1
+      - name: Install and Build 🔧
+        run:
+          npm run build-storybook
+      - name: Deploy to GitHub Pages
+        uses: JamesIves/github-pages-deploy-action@v4.3.4
         with:
-          path: ~/.npm
-          key: ${{ runner.os }}-npm-cache-${{ hashFiles('**/package-lock.json') }}
-          restore-keys: |
-            ${{ runner.os }}-npm-cache-
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Build Storybook 🔧
-        run: npm run build-storybook
-
-      - name: Deploy to Vercel
-        uses: vercel/vercel-action@v2
-        with:
-          vercel-token: ${{ secrets.VERCEL_TOKEN }}
-          vercel-org-id: ${{ secrets.ORG_ID }}
-          vercel-project-id: ${{ secrets.PROJECT_ID }}
-          vercel-args: '--prod'
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          BRANCH: gh-pages
+          FOLDER: storybook-static
+          CLEAN: true
+          TARGET_FOLDER: docs
